# OSProjects

./: .gitignore  README.md
docs/HW1/: HW1.a.docx
docs/HW3/: Loop_Report.txt  Moncarlo_ThreadBenchmark_100000000.ods
docs/HW4/: HW4.a.docx
ipc/pipe/: pipe.sln  pipe.vcxproj
ipc/pipe/src/: Child.cpp  Child.h  Parent.cpp  Parent.h  Pipe.cpp  Pipe.h  Process Pipe.vcxproj.filters  common.h  main.cpp
ipc/rpc/: Client.vcxproj  Client.vcxproj.filters  RPCWin32.sln  Server.vcxproj  Server.vcxproj.filters
ipc/rpc/scripts/: compile_idl.bat  vcvarsall.bat
ipc/rpc/src/: Client.cpp  Fact.idl  MidlCommon.cpp  MidlCommon.h  Server.cpp
threading/: CMakeLists.txt  loop.cpp  moncarlo.cpp  pthread_test.cpp  race.cpp  rw.cpp
